--- a/packages/css/styles.css
+++ b/packages/css/styles.css
@@ -671,7 +671,7 @@ img {
   width:500px;
   text-align: center;
   padding:20px;
-  margin: 90px;
+  margin-left: 200px;
   background-color: var(--container-color);
   padding: 3.5rem 0.5rem 1.25rem 1.5rem;
   border-radius: 0.25rem;
